archetypes-ftest: refactored/fixed kitchensink and simpleapp ftests, added missing arquillian profiles