@@ -12,11 +12,11 @@
 		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
 		PURPOSE. See the GNU Lesser General Public License for more details.
 
-		You should have received a copy of the GNU Lesser General Public
-		License along with this software; if not, write to the Free Software
-		Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
-		USA, or see the FSF site: http://www.fsf.org.
-	-->
+    You should have received a copy of the GNU Lesser General Public
+    License along with this software; if not, write to the Free Software
+    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
+    USA, or see the FSF site: http://www.fsf.org.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -32,97 +32,112 @@
     <description>Functional Test for richfaces-archetype-simpleapp</description>
 
     <properties>
-        <!--  Other -->
+        <!-- arquillian properties -->
+        <!-- default values according to http://docs.oracle.com/javase/7/docs/technotes/guides/net/ipv6_guide/index.html -->
+        <jvm.args.ip>-Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=false</jvm.args.ip>
+        <!-- jvm args for all containers without setting prefered IP -->
+        <arquillian.container.all.jvm.args>-Xms1024m -Xmx1024m -XX:MaxPermSize=512m -DstatelessViews=${statelessViews}</arquillian.container.all.jvm.args>
+        <arquillian.container.all.jvm.args.withIP>${arquillian.container.all.jvm.args} ${jvm.args.ip}</arquillian.container.all.jvm.args.withIP>
+        <!-- following will be set as system properties -->
+        <arquillian.container.jbossas.7-1.node0>127.0.0.1</arquillian.container.jbossas.7-1.node0>
+        <arquillian.container.jbossas.7-1.jvm.args>${arquillian.container.all.jvm.args.withIP}
+            -Djboss.bind.address=${arquillian.container.jbossas.7-1.node0}
+            -Djboss.bind.address.management=${arquillian.container.jbossas.7-1.node0}
+            -Djboss.bind.address.unsecure=${arquillian.container.jbossas.7-1.node0}
+        </arquillian.container.jbossas.7-1.jvm.args>
+
+        <!-- which tests should be run and which not -->
+        <testng.suite.xml>src/test/resources/testng/testng.xml</testng.suite.xml>
+
         <application.target.directory>${basedir}/../apps/richfaces-simpleapp/target</application.target.directory>
-        <context.root>http://localhost:8080</context.root>
-        <context.path>richfaces-simpleapp-jee6</context.path>
+        <!-- will change automcatically when tomcat profile is detected -->
+        <application.war>${application.target.directory}/richfaces-simpleapp-jee6.war</application.war>
+
+        <!-- testng listeners for better console output -->
+        <testng.listeners>org.jboss.test.selenium.listener.ConsoleStatusTestListener,org.jboss.test.selenium.listener.FailureLoggingTestListener</testng.listeners>
     </properties>
 
     <dependencies>
-        <!-- Arquillian -->
+        <!-- Support for WebDriver in Arquillian Drone -->
+        <!-- Support for WebDriver in Arquillian Drone -->
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-drone-webdriver-depchain</artifactId>
+            <scope>test</scope>
+            <type>pom</type>
+        </dependency>
+        <!-- Arquillian TestNG support -->
+        <dependency>
+            <groupId>org.jboss.arquillian.testng</groupId>
+            <artifactId>arquillian-testng-container</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- TestNG -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- TestNG listeners for better console output -->
+        <dependency>
+            <groupId>org.richfaces.tests</groupId>
+            <artifactId>testng-listeners</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <!-- Graphene -->
         <dependency>
             <groupId>org.jboss.arquillian.graphene</groupId>
             <artifactId>graphene-webdriver</artifactId>
             <type>pom</type>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.jboss.arquillian.testng</groupId>
-            <artifactId>arquillian-testng-container</artifactId>
-        </dependency>
-        <!-- TestNG -->
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- saves all activated maven profiles to project property qa.activated.profiles -->
+            <plugin>
+                <groupId>org.richfaces.tests</groupId>
+                <artifactId>richfaces-qa-maven-plugin</artifactId>
+                <version>${project.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>profiles</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <test>TestInput</test>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <!-- Variables accessible from JAVA code by System.getProperty -->
                     <systemProperties>
-                        <webdriver.stale.tries>5</webdriver.stale.tries>
-                        <context.root>${context.root}</context.root>
-                        <context.path>${context.path}</context.path>
+                        <application.war>${application.war}</application.war>
                     </systemProperties>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <arguments>-DskipTests=true</arguments>
+                    <!-- Variables accessible e.g. from arquillian.xml -->
+                    <systemPropertyVariables>
+                        <activated.maven.profiles>${qa.activated.profiles}</activated.maven.profiles>
+                        <logging.props.dir>${project.basedir}/src/test/resources</logging.props.dir>
+                        <arquillian.webdriver.browser>firefox</arquillian.webdriver.browser>
+                        <project.build.directory>${project.build.directory}</project.build.directory>
+                        <arquillian.container.jbossas.7-1.node0>${arquillian.container.jbossas.7-1.node0}</arquillian.container.jbossas.7-1.node0>
+                        <arquillian.container.jbossas.7-1.jvm.args>${arquillian.container.jbossas.7-1.jvm.args}</arquillian.container.jbossas.7-1.jvm.args>
+                        <arquillian.container.all.jvm.args>${arquillian.container.all.jvm.args}</arquillian.container.all.jvm.args>
+                    </systemPropertyVariables>
+                    <suiteXmlFiles>
+                        <suiteXmlFiles>${testng.suite.xml}</suiteXmlFiles>
+                    </suiteXmlFiles>
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>${testng.listeners}</value>
+                        </property>
+                    </properties>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>deploy-and-test</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <test>TestInputWithDeploying</test>
-                            <systemProperties>
-                                <application.war>${application.war}</application.war>
-                                <arquillian.launch>${arquillian.launch}</arquillian.launch>
-                            </systemProperties>
-                        </configuration>
-                    </plugin>
-                    <!-- check whether the WAR file with application is prepared -->
-                    <plugin>
-                        <artifactId>maven-enforcer-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>enforce-files-exist</id>
-                                <phase>integration-test</phase>
-                                <goals>
-                                    <goal>enforce</goal>
-                                </goals>
-                                <configuration>
-                                    <rules>
-                                        <requireFilesExist>
-                                            <files>
-                                                <file>${application.war}</file>
-                                            </files>
-                                            <message>
-                                                Pre-prepared WAR with simpleapp has to exist!
-                                            </message>
-                                        </requireFilesExist>
-                                    </rules>
-                                    <fail>true</fail>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
 </project>
